--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!-- Meta -->
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
-    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Disconnect - Discord Bot!'>
-    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='ExyBot - Website'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://exybot.es'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
-        content='https://disconnectbot.com/assets/disconnect.png'>
+        content='https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024'>
     <meta data-n-head='ssr' data-hid='description' name='description'
-        content='Disconnect is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+        content='Exy is a multi-purpose discord bot. It have more than 100 commands and the best entertainment...'>
     <meta data-n-head='ssr' data-hid='og:description' name='og:description'
-        content='Disconnect is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+        content='Exy is a multi-purpose discord bot. It have more than 100 commands and the best entertainment...'>
 
 </head>
 
@@ -42,8 +42,8 @@
     <div class='navbar'>
         <div class='container full flex'>
             <a href='/' class='logo flex'>
-                <img src='assets//disconnect.png' alt='Disconnect Logo'>
-                <p class='title'>Disconnect</p>
+                <img src='' alt=''>
+                <p class='title'>ExyBot</p>
             </a>
             <nav>
                 <ul>
@@ -52,6 +52,7 @@
                     <li><a class='button' href='premium' target="_blank"><span>Premium</span></a></li>
                     <li><a class='button' href='invite'><span>Invite</span></a></li>
                     <li><a class='button' href='support'><span>Support</span></a></li>
+                    <li><a class='button style="color:blue" ' href='support'><span>Dashboard</span></a></li>
                 </ul>
             </nav>
         </div>
