--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <div class='showcase'>
         <div class='container flex'>
             <div class='showcase-text'>
-                <h1>Disconnect - Discord Bot!</h1>
-                <p>Made with love to be the glue to your community. Keep your community together and active!</p>
+                <h1>Exy Bot - Your new Bot!!</h1>
+                <p>Welcome to the Exy Website, a new bot in discord!</p>
                 <div class='buttons flex'>
                     <a class='button btn btn-blurple' href='invite.html'><span><i class="fab fa-discord fa-2x"></i> Add
                             to Discord</span></a>
-                    <a class='button btn' href='#features'><span>See Features </span></a>
+                    <a class='button btn' href='#features'><span>See Exy Awesome Features </span></a>
                     <a class='button btn' href='support.html'><span>Get Support</span></a>
                 </div>
             </div>
@@ -79,15 +79,15 @@
         <div class='container grid'>
             <div>
                 <h3>Entertainment</h3>
-                <p>With Disconnect's entertainment there is <i>never</i> a dull moment. Even with its basic start,
-                    Disconnect is
+                <p>With Exy  entertainment there is <i>never</i> a dull moment. Even with its basic start,
+                    Exy is
                     coming in <b>strong</b> with <b>many new features</b> lined up to kickstart activity in your server!
                     Whether it be
-                    <b>animals</b>, <b>economy</b>, <b>music</b>, or even <b>levelling!</b> ~Disconnect will have it all
+                    <b>animals</b>, <b>memes</b>, <b>music</b>, or even <b>gifs!</b> ~Exy will have it all
                     under control!
                 </p>
             </div>
-            <img src='assets/entertainment.png' alt='rock paper siccors game loss'>
+            <img src='https://media.discordapp.net/attachments/866357506795765780/867344600137990164/unknown.png' alt='rock paper siccors game loss'>
         </div>
     </div>
 
