--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             <img class='desktop' src='assets/music.png' alt='Now Playing Martin Garrix Tremor'>
             <div>
                 <h3>Music</h3>
-                <p>It has been a long time coming but Disconnect has joined the music game providing high quality music
+                <p>It has been a long time coming but Exy has joined the music game providing high quality music
                     from
-                    <b>YouTube</b>, <b>Spotify</b>, <b>Soundcloud</b>, and <b>Discord attachments (mp3 files)</b>
+                    <b>YouTube</b> and <b>Spotify</b>, try the best quality with Exy for free
                 </p>
             </div>
-            <img class='mobile' src='assets/roleplay.png' alt='Cytech has booped Creepa!'>
+            <img class='mobile' src='https://media.discordapp.net/attachments/866357506795765780/867376026522878002/unknown.png' alt='Music!!'>
         </div>
     </div>
 
