--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Head Information -->
-    <title>Disconnect - Discord Bot!</title>
-    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/disconnect.ico'>
+    <title>Exy - Website</title>
+    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024'>
 
     <!-- Styles -->
     <link type='text/css' rel='stylesheet' href='styles/utilities.css'>
@@ -52,7 +52,7 @@
                     <li><a class='button' href='premium' target="_blank"><span>Premium</span></a></li>
                     <li><a class='button' href='invite'><span>Invite</span></a></li>
                     <li><a class='button' href='support'><span>Support</span></a></li>
-                    <li><a class='button style="color:blue" ' href='support'><span>Dashboard</span></a></li>
+                    <li><a class='button style="color:blue" ' href='https://dashboard.exybot.es'><span>Dashboard</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -109,16 +109,16 @@
         <div class='container grid'>
             <div>
                 <h3>Moderation</h3>
-                <p>Disconnect comes with a simple but efficient moderation system. Yes, the current system is pretty
+                <p>Exy comes with a simple but efficient moderation system. Yes, the current system is pretty
                     bare
                     bones featuring the <b>Kick</b>, <b>Ban</b>, <b>Purge</b>, and <b>Set-Prefix</b> which is
                     <b>absolutely</b> perfect for many Discord servers!
                     The simplicity of the current moderation makes head room for some spectacular expansions with some
                     great and
-                    unique features, some of which are already in development!
+                    unique features, some of which are already in development!, Why not start moderating with 15+ commands??
                 </p>
             </div>
-            <img src='assets/moderation.png' alt='You may not ban the owner of the guild.'>
+            <img src='https://media.discordapp.net/attachments/866357506795765780/867377363192250388/unknown.png' alt='You may not ban the owner of the guild.'>
         </div>
     </div>
 
@@ -127,7 +127,7 @@
         <div class='container full grid'>
             <div class='branding'>
                 <h4>Disconnect</h4>
-                <p>Copyright &copy; 2021 Disconnect</p>
+                <p>Copyright &copy; 2021 ExyBot - DepDev</p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
@@ -141,7 +141,7 @@
                     <ul>
                         <li><a class='button' href='premium.html' target="_blank"><span>Premium</span></a></li>
                         <li><a class='button' href='support.html'><span>Support Server</span></a></li>
-                        <li><a class='button' href='invite.html'><span>Invite Disconnect</span></a></li>
+                        <li><a class='button' href='invite.html'><span>Invite Exy</span></a></li>
                     </ul>
                 </div>
             </div>
