--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
     <div class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h4>Disconnect</h4>
-                <p>Copyright &copy; 2021 ExyBot - DepDev</p>
+                <h4>ExyBot</h4>
+                <p>Copyright &copy; 2021 DepDev</p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
