--- a/invite.html
+++ b/invite.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Refresh" content="0; url='http://bit.ly/InviteDisconnectUpdated'" />
 
     <!-- Head Information -->
-    <title>Invite Disconnect</title>
+    <title>Invite Exy</title>
     <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/disconnect.ico'>
 
     <!-- Styles -->
@@ -26,14 +26,14 @@
     <meta name="robots" content="all" />
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
-    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Invite Disconnect'>
-    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/invite.html'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Invite Exy'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://exybot.es/invite.html'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
-        content='https://disconnectbot.com/assets/disconnect.png'>
+        content='https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024'>
     <meta data-n-head='ssr' data-hid='description' name='description'
-        content='Invite Disconnect to your Discord guild!'>
+        content='Invite Exy to your Discord guild!'>
     <meta data-n-head='ssr' data-hid='og:description' name='og:description'
-        content='Disconnect is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+        content='Exy is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
 
 </head>
 
@@ -46,8 +46,8 @@
     <div class='navbar'>
         <div class='container full flex'>
             <a href='/' class='logo flex'>
-                <img src='assets//disconnect.png' alt='Disconnect Logo'>
-                <p class='title'>Disconnect</p>
+                <img src='https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024' alt=' Logo'>
+                <p class='title'>ExyBot</p>
             </a>
             <nav>
                 <ul>
@@ -56,6 +56,7 @@
                     <li><a class='button' href='premium' target="_blank"><span>Premium</span></a></li>
                     <li><a class='button currentPage' href='invite'><span>Invite</span></a></li>
                     <li><a class='button' href='support'><span>Support</span></a></li>
+                    <li><a class='button' href='https://dashboard.exybot.es'><span>Dashboard</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -66,9 +67,10 @@
         <div class='container flex'>
             <div class='showcase-text'>
                 <h1>Redirecting...</h1>
-                <p>If you are not automatically redirected please click the button below to Invite Disconnect!</p>
+                <p>If you are not automatically redirected please click the button below to Invite Exy!</p>
                 <div class='buttons flex'>
-                    <a class='button btn btn-blurple' href='https://bit.ly/inviteDisconnect'><span><i
+                    <a class='button btn btn-blurple' href='
+https://discord.com/api/oauth2/authorize?client_id=721793010261819424&permissions=8&scope=bot'><span><i
                                 class="fab fa-discord fa-2x"></i> Add to Discord</span></a>
                 </div>
             </div>
@@ -79,8 +81,8 @@
     <div class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h4>Disconnect</h4>
-                <p>Copyright &copy; 2021 Disconnect</p>
+                <h4>ExyBot</h4>
+                <p>Copyright &copy; 2021 DepDev</p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
