--- a/invite.html
+++ b/invite.html
@@ -6,11 +6,11 @@
     <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Redirect -->
-    <meta http-equiv="Refresh" content="0; url='http://bit.ly/InviteDisconnectUpdated'" />
+    <meta http-equiv="Refresh" content="0; url='https://discord.com/api/oauth2/authorize?client_id=721793010261819424&permissions=8&scope=bot'" />
 
     <!-- Head Information -->
     <title>Invite Exy</title>
-    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/disconnect.ico'>
+    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024'>
 
     <!-- Styles -->
     <link type='text/css' rel='stylesheet' href='styles/utilities.css'>
