--- a/support.html
+++ b/support.html
@@ -6,10 +6,10 @@
     <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Redirect -->
-    <meta http-equiv="Refresh" content="0; url='https://discord.gg/gFJasaP5bf'" />
+    <meta http-equiv="Refresh" content="0; url='https://discord.gg/7txJ4dZcbM'" />
 
     <!-- Head Information -->
-    <title>Invite Disconnect</title>
+    <title>Support Server Exy</title>
     <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/disconnect.ico'>
 
     <!-- Styles -->
@@ -27,12 +27,12 @@
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
     <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Join Support Server'>
-    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/support.html'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://exybot.es/support.html'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
         content='https://disconnectbot.com/assets/disconnect.png'>
-    <meta data-n-head='ssr' data-hid='description' name='description' content='Join the Disconnect Support Server!'>
+    <meta data-n-head='ssr' data-hid='description' name='description' content='Join the Exy Support Server!'>
     <meta data-n-head='ssr' data-hid='og:description' name='og:description'
-        content='Disconnect is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+        content='Exy is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
 
 </head>
 
@@ -45,8 +45,8 @@
     <div class='navbar'>
         <div class='container full flex'>
             <a href='/' class='logo flex'>
-                <img src='assets//disconnect.png' alt='Disconnect Logo'>
-                <p class='title'>Disconnect</p>
+                <img src='' alt=''>
+                <p class='title'>Exy</p>
             </a>
             <nav>
                 <ul>
@@ -65,10 +65,10 @@
         <div class='container flex'>
             <div class='showcase-text'>
                 <h1>Redirecting...</h1>
-                <p>If you are not automatically redirected please click the button below to Join the Disconnect Support
+                <p>If you are not automatically redirected please click the button below to Join the Exy Support
                     Server!</p>
                 <div class='buttons flex'>
-                    <a class='button btn' href='https://discord.gg/gFJasaP5bf'><span>Join Support Server</span></a>
+                    <a class='button btn' href='https://discord.gg/7txJ4dZcbM'><span>Join Support Server</span></a>
                 </div>
             </div>
         </div>
@@ -78,8 +78,8 @@
     <div class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h4>Disconnect</h4>
-                <p>Copyright &copy; 2021 Disconnect</p>
+                <h4>ExyBot</h4>
+                <p>Copyright &copy; 2021 DepDev</p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
