--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
             </nav>
         </div>
     </div>
+    <center>
 <br><br>
 <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=30&p=48&l=ez&f=ifr&linkID=ce58d9502ac2ba755b1d9f8813b2ea6b&t=franxiss-21&tracking_id=franxiss-21" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
-    <!-- Showcase -->
+   </center> <!-- Showcase -->
     <div class='showcase'>
         <div class='container flex'>
             <div class='showcase-text'>
