--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <div class='showcase'>
         <div class='container flex'>
             <div class='showcase-text'>
+                <img src="https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024" width="100">
                 <h1>Exy Bot - Your new Bot!!</h1>
                 <p>Welcome to the Exy Website, a new bot in discord!</p>
                 <div class='buttons flex'>
@@ -78,7 +79,7 @@
     <div id='features' class='features'>
         <div class='container grid'>
             <div>
-                <h3>Entertainment</h3>
+               <center> <h2>Entertainment</h2></center>
                 <p>With Exy  entertainment there is <i>never</i> a dull moment. Even with its basic start,
                     Exy is
                     coming in <b>strong</b> with <b>many new features</b> lined up to kickstart activity in your server!
@@ -95,7 +96,7 @@
         <div class='container grid'>
             <img class='desktop' src='https://media.discordapp.net/attachments/866357506795765780/867381163408359440/unknown.png' alt='Now Playing Martin Garrix Tremor'>
             <div>
-                <h3>Music</h3>
+                <center><h2>Music</h2></center>
                 <p>It has been a long time coming but Exy has joined the music game providing high quality music
                     from
                     <b>YouTube</b> and <b>Spotify</b>, try the best quality with Exy for free
@@ -108,7 +109,7 @@
     <div class='features'>
         <div class='container grid'>
             <div>
-                <h3>Moderation</h3>
+               <center> <h2>Moderation</h2></center>
                 <p>Exy comes with a simple but efficient moderation system. Yes, the current system is pretty
                     bare
                     bones featuring the <b>Kick</b>, <b>Ban</b>, <b>Purge</b>, and <b>Set-Prefix</b> which is
