--- a/commands.html
+++ b/commands.html
@@ -6,7 +6,7 @@
     <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Head Information -->
-    <title>Disconnect - Commands</title>
+    <title>Exy - Commands</title>
     <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/disconnect.ico'>
 
     <!-- Styles -->
@@ -22,7 +22,7 @@
     <!-- Meta -->
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
-    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Disconnect - Commands'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Exy - Commands'>
     <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/commands.html'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
         content='https://disconnectbot.com/assets/disconnect.png'>
@@ -64,15 +64,15 @@
                 <h2>COMMAND PREFIX</h2>
                 <div class='flex'>
                     <p>The default prefix is </p>
-                    <pre><code> ! </code></pre>
+                    <pre><code> e! </code></pre>
                 </div>
                 <div class='flex pop'>
                     <p>To find a guilds prefix mention </p>
-                    <pre><code> @Disconnect#2622 </code></pre>
+                    <pre><code> @Exy <3#5693 </code></pre>
                 </div>
                 <div class='flex'>
                     <p>Command Example: </p>
-                    <pre><code>!help</code></pre>
+                    <pre><code>e!help</code></pre>
                 </div>
             </div>
             <div class='commandSyntax'>
@@ -107,7 +107,7 @@
                             <input type='checkbox' id='advice' class='accordion_input'>
                             <label for='advice' class='accordion_label'>Advice</label>
                             <div class='content'>
-                                <p>Get some random advice from Disconnect.</p>
+                                <p>Get some random advice from Exy.</p>
                             </div>
                         </div>
                         <div class='card'>
@@ -238,7 +238,7 @@
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Example: </h4>
-                                    <pre><code>Oh, Magic 8-ball! Will Disconnect continue to grow?</code></pre>
+                                    <pre><code>Oh, Magic 8-ball! Will Exy continue to grow?</code></pre>
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Aliases: </h4>
@@ -1043,7 +1043,7 @@
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Example: </h4>
-                                    <pre><code>avatar @Disconnect#2622</code></pre>
+                                    <pre><code>avatar @Exy <3#5693</code></pre>
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Aliases: </h4>
@@ -1057,7 +1057,7 @@
                             <label for='invite' class='accordion_label'>Invite</label>
                             <div class='content'>
                                 <p>Get invite information for Disconnect! Like <a href='invite.html'>Invite
-                                        Disconnect</a> or <a href='support.html'>Join the Disconnect Support Server</a>!
+                                        Disconnect</a> or <a href='support.html'>Join the Exy Support Server</a>!
                                 </p>
                             </div>
                         </div>
@@ -1073,7 +1073,7 @@
         <div class='container full grid'>
             <div class='branding'>
                 <h4>Disconnect</h4>
-                <p>Copyright &copy; 2021 Disconnect</p>
+                <p>Copyright &copy; 2021 DepDev</p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
@@ -1087,7 +1087,7 @@
                     <ul>
                         <li><a class='button' href='premium.html'><span>Premium</span></a></li>
                         <li><a class='button' href='support.html'><span>Support Server</span></a></li>
-                        <li><a class='button' href='invite.html'><span>Invite Disconnect</span></a></li>
+                        <li><a class='button' href='invite.html'><span>Invite Exy</span></a></li>
                     </ul>
                 </div>
             </div>
