--- a/commands.html
+++ b/commands.html
@@ -27,9 +27,9 @@
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
         content='https://disconnectbot.com/assets/disconnect.png'>
     <meta data-n-head='ssr' data-hid='description' name='description'
-        content='View all the Disconnect commands in one place. Except for the bot it self this is the most up to date list you can find!'>
+        content='View all the Exy commands in one place. Except for the bot it self this is the most up to date list you can find!'>
     <meta data-n-head='ssr' data-hid='og:description' name='og:description'
-        content='Disconnect is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+        content='Exy is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
 
 </head>
 
@@ -43,7 +43,7 @@
         <div class='container full flex'>
             <a href='/' class='logo flex'>
                 <img src='assets//disconnect.png' alt='Disconnect Logo'>
-                <p class='title'>Disconnect</p>
+                <p class='title'>Exy</p>
             </a>
             <nav>
                 <ul>
@@ -1072,7 +1072,7 @@
     <div class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h4>Disconnect</h4>
+                <h4>Exy</h4>
                 <p>Copyright &copy; 2021 DepDev</p>
             </div>
             <div class='flex'>
