--- a/commands.html
+++ b/commands.html
@@ -42,7 +42,7 @@
     <div class='navbar'>
         <div class='container full flex'>
             <a href='/' class='logo flex'>
-                <img src='assets//disconnect.png' alt='Disconnect Logo'>
+                <img src='assets//exy.png' alt='Exy Logo'>
                 <p class='title'>Exy</p>
             </a>
             <nav>
