--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Meta -->
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
-    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='ExyBot - Website'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Exy - Website'>
     <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://exybot.es'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
         content='https://cdn.discordapp.com/avatars/721793010261819424/e0f1a278463c3e0d69888144a73ff5d6.png?size=1024'>
