--- a/docs.html
+++ b/docs.html
@@ -6,8 +6,8 @@
     <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Head Information -->
-    <title>Disconnect - Documentation</title>
-    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/disconnect.ico'>
+    <title>Exy - Documentation</title>
+    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/exy.ico'>
 
     <!-- Styles -->
     <link type='text/css' rel='stylesheet' href='styles/utilities.css'>
