--- a/docs.html
+++ b/docs.html
@@ -22,14 +22,14 @@
     <!-- Meta -->
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
-    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Disconnect - Documentation'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Exy - Documentation'>
     <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/docs.html'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
-        content='https://disconnectbot.com/assets/disconnect.png'>
+        content='https://disconnectbot.com/assets/exy.png'>
     <meta data-n-head='ssr' data-hid='description' name='description'
-        content='Get information about Disconnect and how to use him!'>
+        content='Get information about Exy and how to use him!'>
     <meta data-n-head='ssr' data-hid='og:description' name='og:description'
-        content='Disconnect is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active! But it does not stop there...'>
+        content='Exy is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active! But it does not stop there...'>
 </head>
 
 <body style='background-color: #292a2e'>
@@ -41,8 +41,8 @@
     <div class='navbar'>
         <div class='container full flex'>
             <a href='/' class='logo flex'>
-                <img src='assets//disconnect.png' alt='Disconnect Logo'>
-                <p class='title'>Disconnect</p>
+                <img src='assets//disconnect.png' alt='Exy Logo'>
+                <p class='title'>Ezy</p>
             </a>
             <nav>
                 <ul>
@@ -62,7 +62,7 @@
         <h2>Quick Start Guide</h2>
         <div class='container flex'>
             <ol>
-                <li> (<a href='invite.html'><i>Invite Disconnect to your guild!</i></a> )
+                <li> (<a href='invite.html'><i>Invite Exy to your guild!</i></a> )
                 </li>
                 <li>
                     <div class='flex combine'>
@@ -81,7 +81,7 @@
         <h2>About</h2>
         <div class='container flex'>
             <p>
-                Your boy Cy started <b>Disconnect</b> to learn coding but ended up turning into something <i>absolutely
+                Your boy Cy started <b>Exy</b> to learn coding but ended up turning into something <i>absolutely
                     incredible</i>.
                 He released it to the public, and learned from the steady growth that he was in the right direction
                 <del>and that the public had <i>pretty</i> good taste hehe</del>.
@@ -91,7 +91,7 @@
                 to <b>invite the bot to your server!</b>
             </p>
             <p>
-                To make it even squeaky clean, the Disconnect bot has been rewritten for you to have the
+                To make it even squeaky clean, the Exy bot has been rewritten for you to have the
                 <i>smoothest</i> time <b>generating pictures of cute dogs</b>,
                 <b>memeing out</b>, and staking your lives on a <b>legit game of coin flip</b> or <b>rock, paper,
                     scissors</b> with your buddies!
@@ -123,8 +123,8 @@
                 </li>
             </ul>
         </div>
-        <p><i>Have an idea or feature in mind you want to see on Disconnect? Request it on the <a
-                    href='support.html'>Disconnect Support Server Here!</a></i></p>
+        <p><i>Have an idea or feature in mind you want to see on Exy? Request it on the <a
+                    href='support.html'>Exy Support Server Here!</a></i></p>
     </section>
 
     <!-- Developers -->
@@ -133,7 +133,7 @@
         <div class='container flex'>
             <div class='card'>
                 <h3>Cytech</h3>
-                <p>Hello I am Cytech! The creator of Disconnect and this website! Thank you for using Disconnect and I
+                <p>Hello I am Cytech! The creator of Exy and this website! Thank you for using Exy and I
                     hope he meets your expectations!</p>
                 <br>
                 <h4>Check Me Out Below!</h4>
@@ -151,8 +151,8 @@
     <section class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h4>Disconnect</h4>
-                <p>Copyright &copy; 2021 Disconnect</p>
+                <h4>Exy</h4>
+                <p>Copyright &copy; 2021 DepDev</p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
@@ -166,7 +166,7 @@
                     <ul>
                         <li><a class='button' href='premium.html'><span>Premium</span></a></li>
                         <li><a class='button' href='support.html'><span>Support Server</span></a></li>
-                        <li><a class='button' href='invite.html'><span>Invite Disconnect</span></a></li>
+                        <li><a class='button' href='invite.html'><span>Invite Exy</span></a></li>
                     </ul>
                 </div>
             </div>
