--- a/docs.html
+++ b/docs.html
@@ -41,8 +41,8 @@
     <div class='navbar'>
         <div class='container full flex'>
             <a href='/' class='logo flex'>
-                <img src='assets//disconnect.png' alt='Exy Logo'>
-                <p class='title'>Ezy</p>
+                <img src='assets//exy.png' alt='Exy Logo'>
+                <p class='title'>Exy</p>
             </a>
             <nav>
                 <ul>
