--- a/support.html
+++ b/support.html
@@ -6,7 +6,7 @@
     <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Redirect -->
-    <meta http-equiv="Refresh" content="0; url='https://discord.gg/7txJ4dZcbM'" />
+    <meta http-equiv="Refresh" content="0; url='https://discord.gg/T8e5FR5Jqb'" />
 
     <!-- Head Information -->
     <title>Support Server Exy</title>
@@ -68,7 +68,7 @@
                 <p>If you are not automatically redirected please click the button below to Join the Exy Support
                     Server!</p>
                 <div class='buttons flex'>
-                    <a class='button btn' href='https://discord.gg/7txJ4dZcbM'><span>Join Support Server</span></a>
+                    <a class='button btn' href='https://discord.gg/T8e5FR5Jqb'><span>Join Support Server</span></a>
                 </div>
             </div>
         </div>
