--- a/docs.html
+++ b/docs.html
@@ -23,9 +23,9 @@
     <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
     <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Exy - Documentation'>
-    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/docs.html'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://exybot.es/docs.html'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
-        content='https://disconnectbot.com/assets/exy.png'>
+        content='https://exybot.es/assets/exy.png'>
     <meta data-n-head='ssr' data-hid='description' name='description'
         content='Get information about Exy and how to use him!'>
     <meta data-n-head='ssr' data-hid='og:description' name='og:description'
@@ -62,16 +62,16 @@
         <h2>Quick Start Guide</h2>
         <div class='container flex'>
             <ol>
-                <li> (<a href='invite.html'><i>Invite Exy to your guild!</i></a> )
+                <li> <a href='invite.html'><b>Invite Exy to your guild!</b></a> 
                 </li>
                 <li>
                     <div class='flex combine'>
-                        <p>Change the prefix to what you like using</p>
-                        <pre><code>set-prefix</code></pre>
+                        <p>Explore all our amazing commands using</p>
+                        <pre><code>e!help</code></pre>
                         <p></p>
                     </div>
                 </li>
-                <li>You're all set to go! Have fun!</li>
+                <li>Yay! You aready to have a blass!!</li>
             </ol>
         </div>
     </section>
@@ -81,45 +81,32 @@
         <h2>About</h2>
         <div class='container flex'>
             <p>
-                Your boy Cy started <b>Exy</b> to learn coding but ended up turning into something <i>absolutely
-                    incredible</i>.
-                He released it to the public, and learned from the steady growth that he was in the right direction
-                <del>and that the public had <i>pretty</i> good taste hehe</del>.
-                And so he continued to rock a service people loved and adored which turned into this bot of
-                <i>awesomeness</i> before you!
-                So far it's been a really fun solo project for Cy and he wishes to share that fun by allowing everyone
-                to <b>invite the bot to your server!</b>
+                ExyBot is a multipurpose bot that started on 2021, with the unique purpose of make more easy the community, and help others discord servers to have a better moderation tool, be easy to manage this commands, and the first important purpose, make a clearly fun community. We are updating and maintaning this bot 24/7, and we never will close it!! We want still with you all the time!!
             </p>
-            <p>
-                To make it even squeaky clean, the Exy bot has been rewritten for you to have the
-                <i>smoothest</i> time <b>generating pictures of cute dogs</b>,
-                <b>memeing out</b>, and staking your lives on a <b>legit game of coin flip</b> or <b>rock, paper,
-                    scissors</b> with your buddies!
-                And yeah, it'll always stay up to date on those <i>silly API switches</i>!
-            </p>
+          
         </div>
     </section>
 
     <!-- Latest -->
     <section class='changelog card'>
         <h2>Latest Update</h2>
-        <h3>Version 2.1.2 - Code Review + Twitter Notifier</h3>
+        <h3>Version 1.2.2 - Discord Slash Commands Part 1/2</h3>
         <div class='container flex'>
             <ul>
                 <li>
-                    <p>Did my annual self code review</p>
+                    <p>We started to implements Discord Slash commands</p>
                 </li>
                 <li>
-                    <p>Cleaned up many files and updated EMCA script and added rating</p>
+                    <p>Update all the outdated code to make more easier</p>
                 </li>
                 <li>
-                    <p>Added Twitter notifications</p>
+                    <p>Added Reminder notifications</p>
                 </li>
                 <li>
                     <p>Fixed guild info channels not working properly</p>
                 </li>
                 <li>
-                    <p>Added YouTube Channel and Twitter Account Lookup command in Social Category</p>
+                    <p>Added some command in Fun Category</p>
                 </li>
             </ul>
         </div>
@@ -132,16 +119,16 @@
         <h2>Developers</h2>
         <div class='container flex'>
             <div class='card'>
-                <h3>Cytech</h3>
-                <p>Hello I am Cytech! The creator of Exy and this website! Thank you for using Exy and I
+                <h3>Franxiss_</h3>
+                <p>Hello I am Franxis! The creator of Exy and this website! Thank you for using Exy and I
                     hope he meets your expectations!</p>
                 <br>
                 <h4>Check Me Out Below!</h4>
                 <div class='media'>
-                    <a href="https://github.com/devcytech"><i class="fab fa-github fa-2x"></i></a>
-                    <a href="https://devcytech.com/"><i class="fas fa-globe fa-2x"></i></a>
-                    <a href="https://discord.gg/xthUucAwX8"><i class="fab fa-discord fa-2x"></i></a>
-                    <a href="https://twitter.com/DevCytech"><i class="fab fa-twitter fa-2x"></i></a>
+                    <a href="https://github.com/"><i class="fab fa-github fa-2x"></i></a>
+                    <a href="https://.com/"><i class="fas fa-globe fa-2x"></i></a>
+                    <a href="https://discord.gg/"><i class="fab fa-discord fa-2x"></i></a>
+                    <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x"></i></a>
                 </div>
             </div>
         </div>
