--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         content='Exy is a multi-purpose discord bot. It have more than 100 commands and the best entertainment...'>
 
 </head>
+    <script src="https://cdn.websitepolicies.io/lib/cookieconsent/1.0.3/cookieconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcc.init({"border":"normal","corners":"large","colors":{"popup":{"background":"#1c1f4b","text":"#ffffff","border":"#afb3e4"},"button":{"background":"#afb3e4","text":"#000000"}},"position":"bottom","margin":"small","transparency":"10","fontsize":"large","content":{"href":"https://exybot.es/cookies.html","message":"ExyBot website uses cookies to ensure you get the best experience on our website","link":"I want learn more about that"}})});</script>
 
 <body style='background-color: #292a2e'>
     <!-- Preloader -->
