--- a/cookies.html
+++ b/cookies.html
@@ -1,4 +1,62 @@
-<h1>Cookie policy</h1>
+<!DOCTYPE html>
+<html lang='en'>
+
+<head>
+    <meta data-n-head='ssr' charset="utf-8">
+    <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Head Information -->
+    <title>Exy - Commands</title>
+    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/exy.ico'>
+
+    <!-- Styles -->
+    <link type='text/css' rel='stylesheet' href='styles/utilities.css'>
+    <link type='text/css' rel='stylesheet' href='styles/common.css'>
+    <link type='text/css' rel='stylesheet' href='styles/commands.css'>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous">
+
+    <!-- Meta -->
+    <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
+    <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Exy - Commands'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/commands.html'>
+    <meta data-n-head='ssr' data-hid='og:image' name='og:image'
+        content='https://disconnectbot.com/assets/disconnect.png'>
+    <meta data-n-head='ssr' data-hid='description' name='description'
+        content='View all the Exy commands in one place. Except for the bot it self this is the most up to date list you can find!'>
+    <meta data-n-head='ssr' data-hid='og:description' name='og:description'
+        content='Exy is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+
+</head>
+
+<body style='background-color: #292a2e'>
+    <!-- Preloader -->
+
+    <body class='preload'></body>
+
+    <!-- Header -->
+    <div class='navbar'>
+        <div class='container full flex'>
+            <a href='/' class='logo flex'>
+                <img src='assets//exy.png' alt='Exy Logo'>
+                <p class='title'>Exy</p>
+            </a>
+            <nav>
+                <ul>
+                    <li><a class='button currentPage' href='commands'><span>Commands</span></a></li>
+                    <li><a class='button' href='docs'><span>Information</span></a></li>
+                    <li><a class='button' href='premium' target="_blank"><span>Premium</span></a></li>
+                    <li><a class='button' href='invite'><span>Invite</span></a></li>
+                    <li><a class='button' href='support'><span>Support</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+  <h1>Cookie policy</h1>
 <p>This cookie policy (“Policy”) describes what cookies are and how and they&#039;re being used by the <a target="_blank" rel="nofollow" href="https://exybot.es">exybot.es</a> website (“Website” or “Service”) and any of its related products and services (collectively, “Services”). This Policy is a legally binding agreement between you (“User”, “you” or “your”) and this Website operator (“Operator”, “we”, “us” or “our”). If you are entering into this agreement on behalf of a business or other legal entity, you represent that you have the authority to bind such entity to this agreement, in which case the terms “User”, “you” or “your” shall refer to such entity. If you do not have such authority, or if you do not agree with the terms of this agreement, you must not accept this agreement and may not access and use the Website and Services. You should read this Policy so you can understand the types of cookies we use, the information we collect using cookies and how that information is used. It also describes the choices available to you regarding accepting or declining the use of cookies. This cookie policy was created with the help of the <a target="_blank" href="https://www.websitepolicies.com/cookie-policy-generator" rel="noopener">cookie policy generator</a>.</p>
 <h2>What are cookies?</h2>
 <p>Cookies are small pieces of data stored in text files that are saved on your computer or other devices when websites are loaded in a browser. They are widely used to remember you and your preferences, either for a single visit (through a &quot;session cookie&quot;) or for multiple repeat visits (using a &quot;persistent cookie&quot;).</p>
