--- a/terms.html
+++ b/terms.html
@@ -1,4 +1,63 @@
-Terms of Use
+<!DOCTYPE html>
+<html lang='en'>
+
+<head>
+    <meta data-n-head='ssr' charset="utf-8">
+    <meta data-n-head='ssr' name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Head Information -->
+    <title>Exy - Commands</title>
+    <link data-n-head='ssr' rel='icon' type='image/x-icon' href='assets/exy.ico'>
+
+    <!-- Styles -->
+    <link type='text/css' rel='stylesheet' href='styles/utilities.css'>
+    <link type='text/css' rel='stylesheet' href='styles/common.css'>
+    <link type='text/css' rel='stylesheet' href='styles/commands.css'>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous">
+
+    <!-- Meta -->
+    <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#8f45d9'>
+    <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
+    <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Exy - Commands'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://disconnectbot.com/commands.html'>
+    <meta data-n-head='ssr' data-hid='og:image' name='og:image'
+        content='https://disconnectbot.com/assets/disconnect.png'>
+    <meta data-n-head='ssr' data-hid='description' name='description'
+        content='View all the Exy commands in one place. Except for the bot it self this is the most up to date list you can find!'>
+    <meta data-n-head='ssr' data-hid='og:description' name='og:description'
+        content='Exy is a multi-purpose discord bot. Built with love and entertainment in mind to keep your discord members busy and active. But it does not stop there...'>
+
+</head>
+
+<body style='background-color: #292a2e'>
+    <!-- Preloader -->
+
+    <body class='preload'></body>
+
+    <!-- Header -->
+    <div class='navbar'>
+        <div class='container full flex'>
+            <a href='/' class='logo flex'>
+                <img src='assets//exy.png' alt='Exy Logo'>
+                <p class='title'>Exy</p>
+            </a>
+            <nav>
+                <ul>
+                    <li><a class='button currentPage' href='commands'><span>Commands</span></a></li>
+                    <li><a class='button' href='docs'><span>Information</span></a></li>
+                    <li><a class='button' href='premium' target="_blank"><span>Premium</span></a></li>
+                    <li><a class='button' href='invite'><span>Invite</span></a></li>
+                    <li><a class='button' href='support'><span>Support</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <br>
+  Terms of Use
 
 Effective date: March, 30 - 17:11:00 CEST
 
